# ssbd-pipeline

./: LICENSE  README.md  pyproject.toml  setup.cfg
docs/: INSTALL.md  MODELS.md
src/: m1.py  m2.py
src/ssbdplus/: __init__.py  frame_selector.py  m1.py  m2.py  pipeline.py  prefetch.py
