[metadata]
name = ssbdplus
version = 1.0.0
author = SARL, IIITB
author_email = mr@iiitb.ac.in
description = Models pertaining to the paper, Introducing SSBD+ Dataset with an Attentive Convolutional Pipeline for detecting Self-Stimulatory Behaviours in Children using raw videos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarl-iiitb/ssbd-pipeline
project_urls =
    Bug Tracker = https://github.com/sarl-iiitb/ssbd-pipeline/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src